fix(): Icons hidden in dark mode

--- a/src/theme/app.dark.scss
+++ b/src/theme/app.dark.scss
@@ -7,6 +7,10 @@
         }
     }
 
+    .black {
+        color: black !important;
+    }
+
     #post-card {
         background-color: $dark-menu !important;
         color: white !important;
